# c_toy_engine

./: CMakeLists.txt
engine/: CMakeLists.txt  engine.h
engine/core/: CMakeLists.txt  defines.h  error_list.h  logger.h  memory.h
engine/src/: CMakeLists.txt  engine.c  error_list.c  logger.c  memory.c
main/: CMakeLists.txt  main.c
math/: CMakeLists.txt  mat4.h  math_types.h  vec2.h  vec3.h  vec4.h
platform/: CMakeLists.txt  input.h  keys.h  platform.h
platform/linux/: CMakeLists.txt  display_x11.c  gl_context.c  input.c  platform.c
platform/linux/include/: CMakeLists.txt  display_x11.h  gl_context.h
